--- a/jaffle_shop/models/staging/src_seeds/sensitive/_models.yml
+++ b/jaffle_shop/models/staging/src_seeds/sensitive/_models.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: stg_customers
+  - name: stg_customers_pii
     meta:
       owner: "maja.cernja@krakentechnologies.ltd"
     description: List of jaffle shop customers
