--- a/jaffle_shop/models/warehouse/_models.yml
+++ b/jaffle_shop/models/warehouse/_models.yml
@@ -4,11 +4,85 @@ models:
   - name: wh_jaffle_customers
     meta:
       owner: "maja.cernja@krakentechnologies.ltd"
-    description: A table of customer information with one row per customer
+    description: |
+      This table has basic information about a customer, as well as some derived facts based on a customer's orders
+    
     columns:
       - name: customer_id
+        description: This is a unique identifier for a customer
         tests:
           - unique
           - not_null
+
       - name: first_name
-      
+        description: Customer's first name. PII.
+
+      - name: last_name
+        description: Customer's last name. PII.
+
+      - name: first_order
+        description: Date (UTC) of a customer's first order
+
+      - name: most_recent_order
+        description: Date (UTC) of a customer's most recent order
+
+      - name: number_of_orders
+        description: Count of the number of orders a customer has placed
+
+      - name: total_order_amount
+        description: Total value (AUD) of a customer's orders
+
+  - name: wh_jaffle_orders
+    meta:
+        owner: "maja.cernja@krakentechnologies.ltd"
+    description: |
+      This table has basic information about orders, as well as some derived facts based on payments
+    
+    columns:
+      - name: order_id
+        tests:
+          - unique
+          - not_null
+        description: This is a unique identifier for an order
+
+      - name: customer_id
+        description: Foreign key to the customers table
+        tests:
+          - not_null
+          - relationships:
+              to: ref('wh_jaffle_customers')
+              field: customer_id
+
+      - name: order_date
+        description: Date (UTC) that the order was placed
+
+      - name: status
+        description: '{{ doc("orders_status") }}'
+        tests:
+          - accepted_values:
+              values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
+
+      - name: amount
+        description: Total amount (AUD) of the order
+        tests:
+          - not_null
+
+      - name: credit_card_amount
+        description: Amount of the order (AUD) paid for by credit card
+        tests:
+          - not_null
+
+      - name: coupon_amount
+        description: Amount of the order (AUD) paid for by coupon
+        tests:
+          - not_null
+
+      - name: bank_transfer_amount
+        description: Amount of the order (AUD) paid for by bank transfer
+        tests:
+          - not_null
+
+      - name: gift_card_amount
+        description: Amount of the order (AUD) paid for by gift card
+        tests:
+          - not_null
