Create sales fnl model

--- a/jaffle_shop/models/staging/src_seeds/_models.yml
+++ b/jaffle_shop/models/staging/src_seeds/_models.yml
@@ -10,6 +10,12 @@ models:
         tests:
           - unique
           - not_null
+      - name: first_name_hash
+        tests:
+          - dbt_expectations.expect_columns_to_exist
+      - name: last_name_hash
+        tests:
+          - dbt_expectations.expect_columns_to_exist
 
   - name: stg_orders
     meta:
