--- a/jaffle_shop/models/warehouse/_models.yml
+++ b/jaffle_shop/models/warehouse/_models.yml
@@ -1,8 +1,10 @@
 version: 2
 
 models:
-  - name: customers
+  - name: wh_customers
     description: This table has basic information about a customer, as well as some derived facts based on a customer's orders
+    meta:
+      owner: "joshua.oconnor@kraken.tech"
 
     columns:
       - name: customer_id
@@ -29,9 +31,10 @@ models:
       - name: total_order_amount
         description: Total value (AUD) of a customer's orders
 
-  - name: orders
+  - name: wh_orders
     description: This table has basic information about orders, as well as some derived facts based on payments
-
+    meta:
+      owner: "joshua.oconnor@kraken.tech"
     columns:
       - name: order_id
         tests:
