--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -27,3 +27,12 @@ models:
       materialized: view
     +post-hook:
       - "{{ row_count() }}"
+dispatch:
+  - macro_namespace: dbt
+    search_order:
+      - dadi_local_jaffle_shop
+      - dbt_snowflake_monitoring
+      - dbt
+query-comment:
+  comment: '{{ dbt_snowflake_monitoring.get_query_comment(node) }}'
+  append: true # Snowflake removes prefixed comments.
