--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5.1.0
         with:
-          python-version: "pypy3.11.1"
+          python-version: "3.11.1"
       - run: pip install -r requirements.txt
       - run: mnt
